# rustis

./: .gitignore  Cargo.toml  README.md  ask_AI.txt  body.sh
src/: main.rs
templates/: index.html  zubolite.html  zubolite_input.html  zubolite_smp.html
