[package]
name = "rustis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
askama = "0.12.1"
chrono = "0.4.38"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
regex = "1.11.0"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
url = "2.5.2"
urlencoding = "2.1.3"
